# judo

./: Cargo.toml  README.md
src/app/: state.rs
src/db/: config.rs
src/ui/: cursor.rs  layout.rs
src/ui/components/: db_selector.rs  items.rs  lists.rs  popups.rs
