[package]
name = "judo"
version = "1.2.0"
edition = "2024"
authors = ["Giacomo Piccinini <giacomo.piccinini@proton.me>"]
license = "MIT"
description = "Judo - TUI for ToDo lists"
readme = "README.md"
homepage = "https://github.com/giacomopiccinini/judo"
repository = "https://github.com/giacomopiccinini/judo"
keywords = ["tui", "todo"]

[[bin]]
name = "judo"
path = "src/main.rs"

[lib]
name = "judo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"

[profile.release]
lto = true
